--- a/prototype/css/style.css
+++ b/prototype/css/style.css
@@ -199,11 +199,13 @@ table { border-collapse: collapse; border-spacing: 0; }
    Author:
    ========================================================================== */
 
-header  { float: right; border-bottom: 1px solid black; border-left: 1px solid black; height: 20px; padding: 0 5px;  line-height: 16px; }
-header .login { padding-right: 10px; }
-header .settings-icon { height: 20px; width: 20px; }
-header .settings-icon-overlay { border-left: 1px solid black; border-right: 1px solid black; background: white; }
-header .settings { z-index: 2; display: none; position: absolute; top: 20px; right: 0px; border: 1px solid black; padding: 0 5px; }
+header  { position: absolute; top: 0px; right: 0px; width: 70px; border-bottom: 1px solid black; border-left: 1px solid black; height: 20px; padding: 0 5px;  line-height: 16px; }
+header .login { padding-right: 7px; }
+header .settings-icon { height: 20px; width: 20px; margin: 0 3px; display: block; position: relative; top: -15px; left: 40px; }
+header .settings-icon img { padding-left: 3px; }
+header .settings-icon-no-overlay { padding: 0 1px; }
+header .settings-icon-overlay { border-left: 1px solid black; border-right: 1px solid black; background: white; padding: 0; height: 20px; z-index: 3; }
+header .settings { z-index: 2; display: none; position: absolute; top: 20px; right: 0px; border: 1px solid black; padding: 0 5px; width: 200px; }
 
 footer  { }
 
