--- a/prototype/css/style.css
+++ b/prototype/css/style.css
@@ -212,6 +212,7 @@ footer  { }
 #main   { }
 
 #main #data   { z-index: 2; position: absolute; bottom: 0px; right: 0px; padding: 0 5px; border-top: 1px solid black; border-left: 1px solid black; }
+#main #data .maximize { display: none; }
 
 #main #sidebar { z-index: 2; position: absolute; height: 100%; width: 200px; top: 0px; left: 0px; border-right: 1px solid black; }
 
