--- a/prototype/css/style.css
+++ b/prototype/css/style.css
@@ -199,7 +199,7 @@ table { border-collapse: collapse; border-spacing: 0; }
    Author:
    ========================================================================== */
 
-header  { position: absolute; top: 0px; right: 0px; width: 70px; border-bottom: 1px solid black; border-left: 1px solid black; height: 20px; padding: 0 5px;  line-height: 16px; }
+header  { position: absolute; top: 0px; z-index: 2; right: 0px; width: 70px; border-bottom: 1px solid black; border-left: 1px solid black; height: 20px; padding: 0 5px;  line-height: 16px; }
 header .login { padding-right: 7px; }
 header .settings-icon { height: 20px; width: 20px; margin: 0 3px; display: block; position: relative; top: -15px; left: 40px; }
 header .settings-icon img { padding-left: 3px; }
@@ -219,7 +219,7 @@ footer  { }
 
 #main #sidebar { z-index: 2; position: absolute; height: 100%; width: 200px; top: 0px; left: 0px; border-right: 1px solid black; }
 
-#main #map { width: 100%; height: 100%; z-index: 0; background:grey; }
+#main #map { width: 100%; height: 100%; left: 200px; z-index: 1; background:grey; position:absolute}
 
 
 
