--- a/prototype/css/style.css
+++ b/prototype/css/style.css
@@ -199,13 +199,13 @@ table { border-collapse: collapse; border-spacing: 0; }
    Author:
    ========================================================================== */
 
-header  { position: absolute; top: 0px; z-index: 2; right: 0px; width: 70px; border-bottom: 1px solid black; border-left: 1px solid black; height: 20px; padding: 0 5px;  line-height: 16px; }
+header  { position: absolute; top: 0px; z-index: 2; right: 0px; width: 70px; border-bottom: 1px solid black; border-left: 1px solid black; height: 20px; padding: 0 5px;  line-height: 16px; background: white; }
 header .login { padding-right: 7px; }
 header .settings-icon { height: 20px; width: 20px; margin: 0 3px; display: block; position: relative; top: -15px; left: 40px; }
 header .settings-icon img { padding-left: 3px; }
 header .settings-icon-no-overlay { padding: 0 1px; }
 header .settings-icon-overlay { border-left: 1px solid black; border-right: 1px solid black; background: white; padding: 0; height: 20px; z-index: 3; }
-header .settings { z-index: 2; display: none; position: absolute; top: 20px; right: 0px; border: 1px solid black; padding: 0 5px; width: 200px; }
+header .settings { z-index: 2; display: none; position: absolute; top: 20px; right: 0px; border: 1px solid black; padding: 0 5px; width: 200px; background: white; }
 
 footer  { }
 
@@ -214,10 +214,10 @@ footer  { }
 
 #main   { }
 
-#main #data   { z-index: 2; position: absolute; bottom: 0px; right: 0px; padding: 0 5px; border-top: 1px solid black; border-left: 1px solid black; }
+#main #data   { z-index: 2; position: absolute; bottom: 0px; right: 0px; padding: 0 5px; border-top: 1px solid black; border-left: 1px solid black; background: white; }
 #main #data .maximize { display: none; }
 
-#main #sidebar { z-index: 2; position: absolute; height: 100%; width: 200px; top: 0px; left: 0px; border-right: 1px solid black; }
+#main #sidebar { z-index: 2; position: absolute; height: 100%; width: 200px; top: 0px; left: 0px; border-right: 1px solid black; background: white; }
 
 #main #map { width: 100%; height: 100%; left: 200px; z-index: 1; background:grey; position:absolute}
 
