--- a/prototype/css/style.css
+++ b/prototype/css/style.css
@@ -217,7 +217,9 @@ footer  { }
 #main #data   { z-index: 2; position: absolute; bottom: 0px; right: 0px; padding: 0 5px; border-top: 1px solid black; border-left: 1px solid black; background: white; }
 #main #data .maximize { display: none; }
 
-#main #sidebar { z-index: 2; position: absolute; height: 100%; width: 200px; top: 0px; left: 0px; border-right: 1px solid black; background: white; }
+#main #sidebar { z-index: 2; position: absolute; height: 100%; width: 250px; top: 0px; left: 0px; border-right: 1px solid black; background: white; }
+#main #sidebar h1 { text-align: center; }
+#main #sidebar form { padding-left: 15px; }
 
 #main #map { width: 100%; height: 100%; left: 200px; z-index: 1; background:grey; position:absolute}
 
