--- a/prototype/css/style.css
+++ b/prototype/css/style.css
@@ -199,9 +199,10 @@ table { border-collapse: collapse; border-spacing: 0; }
    Author:
    ========================================================================== */
 
-header  { position: absolute; top: 0px; z-index: 2; right: 0px; width: 70px; border-bottom: 1px solid black; border-left: 1px solid black; height: 20px; padding: 0 5px;  line-height: 16px; background: white; }
+header  { position: absolute; top: 0px; z-index: 2; right: 0px; width: 120px; border-bottom: 1px solid black; border-left: 1px solid black; height: 20px; padding: 0 5px;  line-height: 16px; background: white; }
 header .login { padding-right: 7px; }
-header .settings-icon { height: 20px; width: 20px; margin: 0 3px; display: block; position: relative; top: -15px; left: 40px; }
+header .register { padding-right: 7px; }
+header .settings-icon { height: 20px; width: 20px; margin: 0 3px; display: block; position: absolute; top: 0px; right: 3px; }
 header .settings-icon img { padding-left: 3px; }
 header .settings-icon-no-overlay { padding: 0 1px; }
 header .settings-icon-overlay { border-left: 1px solid black; border-right: 1px solid black; background: white; padding: 0; height: 20px; z-index: 3; }
@@ -211,6 +212,11 @@ footer  { }
 
 #login { display: none; }
 #login .validate { display: none; }
+
+#registration { display: none; }
+#registration .validate { display: none; }
+
+#billing { display: none; }
 
 #main   { }
 
@@ -223,10 +229,12 @@ footer  { }
 
 #main #map { width: 100%; height: 100%; left: 200px; z-index: 1; background:grey; position:absolute}
 
+.ui-dialog label { font-weight: bold; }
 
+#data #content #lat { margin-left: 11px; }
+#data #content #lon { margin-left: 1px; }
 
-
-
+#data #content button { margin: 5px; }
 
 
 
