--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,14 +1,48 @@
 @import "bootstrap-1.2.0.css";
 
-#login { display: none; }
-#login .validate { display: none; }
+#login {
+  display: none;
+}
+#login .validate {
+  display: none;
+}
 
-#main { margin-top: 40px; }
-#main #sidebar { float: left; margin: 0; z-index: 2; height: 100%; width: 250px; border-right: 1px solid black; background: white; }
-#main #sidebar h1 { text-align: center; }
-#main #sidebar form { padding-left: 15px; }
+#main {
+  margin-top: 40px;
+}
+#main #sidebar {
+  float: left;
+  margin: 0;
+  z-index: 2;
+  width: 250px;
+  border-right: 1px solid black;
+  background: white;
+  box-shadow: 2px 0 5px #333;
+  -moz-box-shadow: 2px 0 5px #333;
+  -webkit-box-shadow: 2px 0 5px #333;
+}
+#main #sidebar h1 {
+  text-align: center;
+}
+#main #sidebar form {
+  padding-left: 15px;
+}
 
-#main #map { width: 100%; height: 100%; z-index: 1; background:grey; float: right; }
+#main #map {
+  float: right;
+  z-index: 1;
+  background:grey;
+}
 
-.container { width: auto; }
-.topbar h3 a { margin-left: 0; }
+.container {
+  width: auto;
+}
+
+.topbar {
+  box-shadow: 0 2px 2px 0 #333;
+  -moz-box-shadow: 0 2px 2px 0 #333;
+  -webkit-box-shadow: 0 2px 2px 0 #333;
+}
+.topbar h3 a {
+  margin-left: 0;
+}
