Login now uses the api and the site as a whole uses the mockapi for easier testing

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -62,5 +62,8 @@
   -webkit-box-shadow: 0 2px 2px 0 #333;
 }
 .topbar h3 a {
-  margin-left: 0;
+  margin-left: 20px;
+}
+.topbar ul li.menu, .topbar ul li.user {
+    display: none;
 }
