Removed most of jquery-ui and use bootstrap-modal instead
Bootstrap has also been updated to 1.3.0 and the login dialog has been
restyled because of this

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,10 +1,14 @@
-@import "bootstrap-1.2.0.css";
+@import "bootstrap-1.3.0.css";
 
 #login {
   display: none;
 }
-#login .validate {
+#login .error-empty, #login .error-correct {
   display: none;
+}
+
+#login label {
+  font-weight: bold;
 }
 
 #main {
