Add link to admin interface but only display it if the user is an admin

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -105,7 +105,7 @@ div.popover {
 .topbar h3 a {
   margin-left: 20px;
 }
-.topbar ul li.menu, .topbar ul li.user {
+.topbar ul li.menu, .topbar ul li.user, .topbar ul li.menu ul li.admin {
   display: none;
 }
 
