Add handlebars.js for better template handling
See https://github.com/wycats/handlebars.js for more informations

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -92,6 +92,9 @@ div.popover {
 #main #data .minimize {
   display: none;
 }
+#main #data .content div:last-child {
+  margin-top: 10px;
+}
 
 #admin .modal-body {
   height: 400px;
