Remove <b> tags in label and use css instead

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -95,6 +95,9 @@ div.popover {
 #main #data .content div:last-child {
   margin-top: 10px;
 }
+#main #data .content label {
+  font-weight: bold;
+}
 
 #admin .modal-body {
   height: 400px;
