Rewrite AdminView and add a table + pagination
Also contains start of the implementation of a view to change user data

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -99,8 +99,15 @@ div.popover {
   font-weight: bold;
 }
 
+#admin {
+  width: 800px;
+}
 #admin .modal-body {
-  height: 300px;
+  height: 475px;
+}
+#admin .modal-body table {
+  max-width: 780px;
+  height: 250px;
 }
 #admin .modal-footer a.btn.back {
   display: none;
