--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,7 +5,7 @@
   width: 470px;
 }
 
-#login .alert-message, #register .alert-message {
+#login .alert-message, #register .alert-message, #admin-user .alert-message {
   display: none;
 }
 #login label, #register label {
@@ -13,10 +13,10 @@
   width: 150px;
   padding-right: 5px;
 }
-#login .error, #register .error {
+#login .error, #register .error, #admin-user .error {
   border: 1px solid red;
 }
-#login .valid, #register .valid {
+#login .valid, #register .valid, #admin-user .valid {
   border: 1px solid green;
 }
 
@@ -118,6 +118,10 @@ div.popover {
 #admin a.btn.back {
   display: none;
   float: left;
+}
+#admin-user {
+  width: 400px;
+  margin: 0 auto;
 }
 
 #login a.btn.register {
