Add build script again and some small changes for the build script to work
Some more informations:
- Mockapi has been removed from the index.html
- i18n has to load the lang file synchronous now
- Use ant build or ant minify to create release versions
- To test locally: chromium --allow-file-access-from-files

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,7 @@
 @import "bootstrap-1.4.0.css";
+@import "jquery-ui-1.8.16.custom.css";
+@import "jquery.contextMenu.css";
+@import "smartspinner.css"
 
 #login, #register, #message, #loading {
   display: none;
