--- a/src/css/style.css
+++ b/src/css/style.css
@@ -79,13 +79,12 @@ div.popover {
 }
 
 #main #algview {
+  display: none;
   z-index: 2;
   position: relative;
   float: left;
-  padding: 0 5px;
+  padding: 5px;
   background: white;
-  /*border-top: 1px solid black;
-  border-left: 1px solid black;*/
   box-shadow: 0px 0px 5px #333;
   -moz-box-shadow: 0px 0px 5px #333;
   -webkit-box-shadow: 0px 0px 5px #333;
