--- a/src/css/style.css
+++ b/src/css/style.css
@@ -85,10 +85,14 @@ div.popover {
   float: left;
   padding: 5px;
   background: white;
+
   box-shadow: 0px 0px 5px #333;
   -moz-box-shadow: 0px 0px 5px #333;
   -webkit-box-shadow: 0px 0px 5px #333;
-  
+
+  border-bottom-right-radius: 10px;
+  -moz-border-radius-bottomright: 10px;
+  -webkit-border-bottom-right-radius: 10px;
 }
 
 #main #map {
@@ -107,9 +111,14 @@ div.popover {
   border-top: 1px solid black;
   border-left: 1px solid black;
   background: white;
+
   box-shadow: -2px -2px 5px #333;
   -moz-box-shadow: -2px -2px 5px #333;
   -webkit-box-shadow: -2px -2px 5px #333;
+
+  border-top-left-radius: 10px;
+  -moz-border-radius-topleft: 10px;
+  -webkit-border-top-left-radius: 10px;
 }
 #main #data .minimize {
   display: none;
