--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,7 @@
 @import "jquery-ui-1.8.18.custom.css";
 @import "jquery.contextMenu.css";
 @import "smartspinner.css";
+@import "ui.spinner.css";
 
 #login, #register, #message, #loading {
   display: none;
@@ -13,7 +14,7 @@
   display: none;
 }
 #login label, #register label {
-  font-weight: bold;
+  font-weight: bold;  
   width: 150px;
   padding-right: 5px;
 }
@@ -211,7 +212,7 @@ div.popover {
 }
 #imexport #import input {
   margin: 10px 10px 20px 10px;
-}
+} 
 
 .container {
   width: auto;
