fixed bug: enter key now triggers onSend only in reasonable context. added jQuery UI Spinner in jquery-ui-1.8.18.custom.min.js.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -240,3 +240,10 @@ div.popover {
   top: 2px;
   left: 2px;
 }
+
+.ui-spinner {position: absolute; display: block; left:82%; width:auto;}
+.ui-spinner-buttons {position: relative; display: block;}
+.ui-spinner-button {overflow: hidden; display: block;}
+.spininput {
+  width: 80%;
+}
