bugfixes + replaced tooltip with textblocks in algview

--- a/css/style.css
+++ b/css/style.css
@@ -275,3 +275,8 @@ table.grid {
     border-style: none;
   }
 table.grid td { padding: 1px 1px; text-align: left}
+
+.algdescription {
+  font-size:10px;
+  color: #777;
+}
